	  done.  This fixes a problem where the statusbar is not
	  properly blanked after using the "Go To Line" prompt with the
	  NO_HELP flag set. (DLR)
  titlebar()
	- Use actual_x() to calculate the number of characters VERMSG
	  takes up, in case it's UTF-8. (DLR)
  do_cursorpos()
	- Properly display the value of totsize as unsigned. (DLR)
  do_help()
	- Don't treat NANO_CANCEL_KEY as NANO_EXIT_KEY anymore, for
	  consistency. (DLR)
  statusbar()
	- Set statusblank to 25 instead of 26, to match current Pico.
	  (DLR)
  edit_redraw()
	- Make do_refresh a bool instead of an int. (DLR)
  do_yesno()
	- Allow refreshing the screen via Ctrl-L, as Pico does. (DLR)
	- Add a missing assert, and use actual_x() to calculate the
	  number of characters buf takes up, in case it's UTF-8. (DLR)
  total_redraw()
	- Simplify to call clearok(TRUE) and wrefresh() on curscr, which
	  updates the entire screen in fewer function calls without
	  moving the cursor from the window it's currently in. (DLR)
	- When using slang, use SLsmg_touch_screen() and SLsmg_refresh()
	  to update the screen, as slang doesn't define curscr, and even
	  if it did, the curses method will leave some windows cleared
	  without properly updating them. (DLR)
  do_replace_highlight()
	- Use waddch() instead of waddstr() to display a space when we
	  have a zero-length regex. (DLR)
  do_credits()
	- Save the keystroke that breaks us out of the credits (if any)
	  and put it back so that it isn't lost.  This is especially
	  needed if the keystroke is part of a multibyte character.
	  (DLR)
- nano.1:
	- Clarify and consolidate the descriptions of --fill and
	  --tabsize. (DLR)
- nanorc.5:
	- Update the description of how the "color" regex works. (DLR)
	- Clarify descriptions of the characters that aren't allowed
	  in the "punct" or "brackets" options. (DLR)
	- Use .B instead of \fB ... \fP where possible, as nano.1 does.
	  (DLR)
	- Clarify and consolidate the descriptions of "fill" and
	  "tabsize". (DLR)